Fix page padding/gap for small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -67,9 +67,9 @@
 	--button-radius: 0.25rem;
 
 	/*Margins, gaps and paddings (+widths)*/
-	--page-padding: 1rem;
-	--page-gap: 1rem;
-	--players-gap: 2rem;
+	--page-padding: min(1rem, 2vmin);
+	--page-gap: min(1rem, 2vmin);
+	--players-gap: min(2rem, 3vmin);
 	--shadow-len: 0.75rem;
 	--shadow-len-mark: calc((var(--shadow-len)) / 4);
 	--shadow-len-txt: calc((var(--shadow-len)) / 4);
